# floof

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: file-format.md
src/: action.rs  args.rs  cfg.rs  config.rs  context.rs  http.rs  inject.js  main.rs  prelude.rs  step.rs  task.rs  ui.rs
src/op/: command.rs  concurrently.rs  copy.rs  http.rs  mod.rs  run_task.rs  watch.rs  workdir.rs
