[package]
name = "watchboi"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Language-agnostic, simple-to-use development server, file-watcher and tiny
build system mainly useful for webdev.
"""
repository = "https://github.com/LukasKalbertodt/watchboi/"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "development-tools::build-utils"]

exclude = [".github"]

[dependencies]
anyhow = "1.0"
hyper = "0.13"
notify = "4.0"
serde = { version = "1.0", features=["derive"] }
structopt = "0.3"
termcolor = "1.1"
toml = "0.5"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
tungstenite = "0.11"
