[package]
name = "floof"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Language-agnostic, simple-to-use development server, file-watcher and tiny
build system mainly useful for webdev.
"""
repository = "https://github.com/LukasKalbertodt/floof/"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "development-tools::build-utils"]

exclude = [".github"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bunt = "0.2.1"
notify = "5.0.0-pre.3"
once_cell = "1.4"
penguin = "0.1"
serde = { version = "1.0", features=["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt", "process"] }
type-map = "0.3"
